<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignUpView" customModule="TooDoApp" customModuleProvider="target">
            <connections>
                <outlet property="confirmPasswordTextField" destination="aKF-vN-hZj" id="YoI-PV-RD4"/>
                <outlet property="emailTextField" destination="gn0-Az-gs1" id="LQs-Vu-rcE"/>
                <outlet property="passwordTextField" destination="flw-UT-weE" id="XBW-n0-aZw"/>
                <outlet property="view" destination="iN0-l3-epB" id="Z3a-Mr-OGm"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gn0-Az-gs1">
                    <rect key="frame" x="8" y="70" width="304" height="30"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress"/>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="flw-UT-weE">
                    <rect key="frame" x="8" y="108" width="304" height="30"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aKF-vN-hZj">
                    <rect key="frame" x="8" y="146" width="304" height="30"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                </textField>
            </subviews>
            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
            <constraints>
                <constraint firstItem="flw-UT-weE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="7ns-18-Xbs"/>
                <constraint firstItem="gn0-Az-gs1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="BEm-mc-JJZ"/>
                <constraint firstAttribute="trailing" secondItem="aKF-vN-hZj" secondAttribute="trailing" constant="8" id="CEL-1s-2OZ"/>
                <constraint firstItem="aKF-vN-hZj" firstAttribute="top" secondItem="flw-UT-weE" secondAttribute="bottom" constant="8" id="GKD-Z5-hsq"/>
                <constraint firstItem="gn0-Az-gs1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="70" id="L7T-S7-Mpg"/>
                <constraint firstItem="flw-UT-weE" firstAttribute="top" secondItem="gn0-Az-gs1" secondAttribute="bottom" constant="8" id="e9V-oe-Opp"/>
                <constraint firstAttribute="trailing" secondItem="flw-UT-weE" secondAttribute="trailing" constant="8" id="eCo-hS-Yml"/>
                <constraint firstItem="aKF-vN-hZj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="rfY-HB-8XH"/>
                <constraint firstAttribute="trailing" secondItem="gn0-Az-gs1" secondAttribute="trailing" constant="8" id="zL3-2U-tGH"/>
            </constraints>
            <nil key="simulatedStatusBarMetrics"/>
            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
            <point key="canvasLocation" x="591" y="482"/>
        </view>
    </objects>
</document>
