...
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
    
    override func viewDidLoad(){
        super.viewDidLoad()
        title = "Todo List"
        tableView?.registerClass(UITableViewCell.self, forCellReuseIdentifier: cellIdentifier)
        presenter.doInitialSetup()
    }
    override func viewDidAppear(animated: Bool){
        super.viewDidAppear(animated)
        
...
